# SystemEngineeringExperiment2025

./: README.md
.github/workflows/: pages.yml
FlexibleLink/: .gitignore  README.md  pyproject.toml  repeated_daq.m
FlexibleLink/analysis/: pyproject.toml
FlexibleLink/analysis/cmd/: graphviz.py
FlexibleLink/analysis/src/cmd/: graphviz.py
FlexibleLink/analysis/src/lib/: data.py  fit.py  outliers.py  plot.py  preprocess.py
FlexibleLink/slide/: .marprc  engine.mjs  package-lock.json  package.json
InvertedPendulum/: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_all.txt
InvertedPendulum/logs/train/06-05-16-45-15/: events.out.tfevents.1749109515.ThinkPad.145835.0
InvertedPendulum/logs/train/06-05-16-46-24/: events.out.tfevents.1749109584.ThinkPad.146423.0
InvertedPendulum/logs/train/06-05-16-49-10/: qtable_10000.npy  qtable_20000.npy  qtable_30000.npy  qtable_40000.npy  qtable_50000.npy  qtable_60000.npy  qtable_70000.npy
InvertedPendulum/logs/train/06-07-01-40-24/: events.out.tfevents.1749228024.ThinkPad.157354.0
InvertedPendulum/src/: __init__.py  launch.py  launch_for_rl_policy.py  launch_for_sys_identification.py  mujoco_sim.py
InvertedPendulum/src/docs/: rl.md  setup.md  simulator.md
InvertedPendulum/src/real/: invpen.py  quarc_hw.py
InvertedPendulum/src/rl/: env.py  eval.py  models.py  train.py
InvertedPendulum/src/simulator/: acrobot.py  acrobot.xml
InvertedPendulum/src/system_identification/: cal_parameter.py
InvertedPendulum/src/utils/: logger.py
slides/: README.md  package.json
slides/src/: FlexibleLink.md
(+10 files in other folders)
